# firecrawl

./: SDK_MAXPAGES_IMPLEMENTATION.md
.github/workflows/: test-server.yml
apps/api/: jest.config.ts  package.json  pnpm-lock.yaml
apps/api/sharedLibs/go-html-to-md/: README.md
apps/api/src/: harness.ts  index.ts  types.ts
apps/api/src/controllers/v1/: batch-scrape.ts  crawl.ts  deep-research.ts  extract.ts  generate-llmstxt.ts  map.ts  queue-status.ts  scrape.ts  search.ts  types.ts  x402-search.ts
apps/api/src/controllers/v2/: batch-scrape.ts  concurrency-check.ts  crawl-status.ts  crawl.ts  map.ts  scrape.ts  search.ts  types.ts
apps/api/src/lib/: concurrency-limit.ts  scrape-billing.ts
apps/api/src/lib/deep-research/: deep-research-service.ts
apps/api/src/lib/extract/: extraction-service.ts
apps/api/src/lib/generate-llmstxt/: generate-llmstxt-service.ts
apps/api/src/routes/: shared.ts
apps/api/src/scraper/WebScraper/: crawler.ts  sitemap.ts
apps/api/src/scraper/crawler/: sitemap.ts
apps/api/src/scraper/scrapeURL/: index.ts
apps/api/src/services/: index.ts  queue-jobs.ts  queue-worker.ts  webhook.ts
apps/js-sdk/: example_pagination.ts  test_maxpages_complete.js
apps/js-sdk/firecrawl/: package.json
apps/nuq-postgres/: nuq.sql
apps/python-sdk/: PAGINATION_TESTS_README.md  example_pagination.py  test_maxpages_complete.py
apps/python-sdk/firecrawl/: __init__.py
apps/python-sdk/firecrawl/v1/: client.py
apps/python-sdk/firecrawl/v2/: client.py  client_async.py  types.py
apps/wizard/: Cargo.toml
apps/wizard/src/: main.rs
(+72 files in other folders)
