[package]
name = "wizard"
version = "0.1.0"
edition = "2024"
authors = ["mogery <mogery@sideguide.dev>"]

[dependencies]
oxc_parser = "0.83"
oxc_span = "0.83"
oxc_allocator = "0.83"
oxc_ast = "0.83"
oxc_resolver = "11"
regex = "1.11.2"
openapiv3 = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.11.0"